[gd_scene load_steps=8 format=3 uid="uid://bwyumkyjjlgbg"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_sf6jn"]
[ext_resource type="Texture2D" uid="uid://2ojiuhh4ylty" path="res://assets/textures/stages/mountains/ground.png" id="2_kmr5v"]
[ext_resource type="Texture2D" uid="uid://dkuil2n2chv6r" path="res://assets/textures/stages/mountains/layer1.png" id="3_5nkim"]
[ext_resource type="Texture2D" uid="uid://dryie24s05sef" path="res://assets/textures/stages/mountains/layer2.png" id="4_mkrb7"]
[ext_resource type="PackedScene" uid="uid://bkjutxn8uw17d" path="res://scenes/ui/hud.tscn" id="5_1gumb"]
[ext_resource type="PackedScene" uid="uid://bjepiygra8opl" path="res://scenes/ui/callouts.tscn" id="6_645xr"]
[ext_resource type="PackedScene" uid="uid://crkyk6ro8eos1" path="res://scenes/frame_viewer.tscn" id="7_l2ltd"]

[node name="Game" type="Node2D"]
process_mode = 3
script = ExtResource("1_sf6jn")

[node name="RoundTimer" type="Timer" parent="."]
process_mode = 3
one_shot = true

[node name="StageBackground" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Ground" type="Sprite2D" parent="StageBackground"]
texture_filter = 1
position = Vector2(0, 783)
scale = Vector2(3, 3)
texture = ExtResource("2_kmr5v")
metadata/_edit_lock_ = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="StageBackground"]
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer2" type="ParallaxLayer" parent="StageBackground/ParallaxBackground"]
motion_scale = Vector2(0.2, 0.5)

[node name="Layer0" type="Sprite2D" parent="StageBackground/ParallaxBackground/ParallaxLayer2"]
texture_filter = 1
position = Vector2(0, 136)
scale = Vector2(3, 3)
texture = ExtResource("3_5nkim")
metadata/_edit_lock_ = true

[node name="ParallaxLayer1" type="ParallaxLayer" parent="StageBackground/ParallaxBackground"]
motion_scale = Vector2(0.6, 0.6)

[node name="Layer0" type="Sprite2D" parent="StageBackground/ParallaxBackground/ParallaxLayer1"]
texture_filter = 1
position = Vector2(0, 632)
scale = Vector2(3, 3)
texture = ExtResource("4_mkrb7")
metadata/_edit_lock_ = true

[node name="HUDLayer" parent="." instance=ExtResource("5_1gumb")]

[node name="GameLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="CalloutLayer" parent="." instance=ExtResource("6_645xr")]

[node name="FrameLayer" parent="." instance=ExtResource("7_l2ltd")]
